Fix overflow on body element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,8 @@
 
 body{
     height: 100vh;
+    position: relative;
+    /* min-height: 100%; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,9 +23,8 @@ body{
     background:#b0a3a3 no-repeat center/cover url(../images/game-stage-big-ashok-chakravarthi-unsplash.jpg);
     cursor: none;
     background-color: #0a0a0a;
-    position: relative;
-    max-height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
    
    
 
@@ -321,7 +322,7 @@ footer a:hover{
 } 
 
 /* new modal try */
-
+/* 
 #test-modal {
     justify-content: space-between;
     position: absolute;
@@ -340,5 +341,5 @@ footer a:hover{
     justify-content: space-around;
     align-items: center;
     height: 100%;
- }
+ } */
  /* end of new modal */
